--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </script>
 <body>
     <div class="bg-video-container">
-        <video autoplay muted loop playsinline poster="Assets/13-futuristic_utopia_for_humanity.png" id="bgVideo">
+        <video autoplay muted loop id="bgVideo">
             <source src="Assets/FAI.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
@@ -28,22 +28,25 @@
             <div class="logo">
                 <a href="index.html">
                     <img src="Assets/Logo-_3B3964.svg" alt="Freedom with AI Logo" class="logo-img">
+                    <p class="logo-text">Freedom With AI</p>
                 </a>
-                <p class="logo-text">Freedom With AI</p>
             </div>
-            <a href="contact.html" class="connect-button">
-                <img src="Assets/Connect.svg" alt="Connect Icon">
-                <span>Let's Connect</span>
-            </a>
+            <nav>
+                <a href="resources.html" class="nav-link">Resources</a>
+                <a href="contact.html" class="connect-button">
+                    <img src="Assets/Connect.svg" alt="Connect Icon">
+                    <span>Let's Connect</span>
+                </a>
+            </nav>
         </div>
     </header>
 
     <main>
         <section id="missionStatement" class="mission-statement">
-            <p>Equipping Bold Businesses To Thrive With AI</p>
+            <!-- Mission statement will be loaded by JavaScript -->
         </section>
-        <section id="focalArea" class="focal-area">
-            <!-- Focal areas will be loaded by JavaScript -->
+        <section id="indexContent" class="index-content">
+            <!-- New index content will be loaded by JavaScript -->
         </section>
     </main>
 
