--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <source src="Assets/FAI.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
+        <img src="Assets/StaticImageFAI.png" alt="Fallback background" id="bgFallback">
+</div>
     </div>
     
     <header>
