background for home page changed for fallback for mobile

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <source src="Assets/FAI.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        <img src="Assets/StaticImageFAI.png" alt="Fallback background" id="bgFallback">
+        <img src="Assets/StaticUtopia.svg" alt="Fallback background" id="bgFallback">
 </div>
     </div>
     
