Home page inforgraphic

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <section id="indexContent" class="index-content">
             <!-- New index content will be loaded by JavaScript -->
         </section>
+        <section id="infographicContainer" class="infographic-container">
+            <img src="Assets/HomeInfographic.svg" alt="Infographic" class="infographic">
+        </section>
     </main>
 
     <footer>
