media change for infographic-new

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <!-- New index content will be loaded by JavaScript -->
         </section>
         <section id="infographicContainer" class="infographic-container">
-            <img src="Assets/HomeInfographic.svg" alt="Infographic" class="infographic">
+            <img src="Assets/HomeInfo.svg" alt="Infographic" class="infographic">
         </section>
     </main>
 
