FAI Canvas Page

--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,7 @@
                 </a>
             </div>
             <nav>
+                <a href="faicanvas.html" class="nav-link">FAI Canvas</a>
                 <a href="resources.html" class="nav-link">Resources</a>
                 <a href="contact.html" class="connect-button">
                     <img src="Assets/Connect.svg" alt="Connect Icon">
