--- a/resources.html
+++ b/resources.html
@@ -31,10 +31,10 @@
             <nav>
                 <a href="faicanvas.html" class="nav-link">FAI Canvas</a>
                 <a href="resources.html" class="nav-link">Resources</a>
-                <a href="contact.html" class="connect-button">
-                    <img src="Assets/Connect.svg" alt="Connect Icon">
-                    <span>Let's Connect</span>
-                </a>
+                <!-- contact page OUT<a href="contact.html" class="connect-button"> 
+                <img src="Assets/Connect.svg" alt="Connect Icon">
+                <span>Let's Connect</span> 
+                </a> -->
             </nav>
         </div>
     </header>
